agregue banda de cosas